--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "admin-app",
+  "name": "app-template",
   "version": "0.0.1",
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "run-p watch:routify watch:rollup",
+    "watch:rollup": "rollup -c -w",
+    "watch:routify": "routify",
+    "start": "sirv public --single",
+    "css-dev": "node-sass --watch --recursive --output public/css --source-map true --source-map-contents scss",
+    "watch:css": "css-dev"
+  },
   "devDependencies": {
-    "@rollup/plugin-alias": "^2.2.0",
+    "@rollup/plugin-alias": "^3.0.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-replace": "^2.3.0",
-    "frontier-frontend": "git+https://github.com/jdkdev/frontier-frontend.git",
+    "@sveltech/routify": "1.0.1-11",
+    "autoprefixer": "^9.7.3",
+    "date-fns": "^2.8.1",
+    "frontier-components": "github:jdkdev/frontier-components",
+    "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-scss": "^1.0.2",
     "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-terser": "^5.1.2",
+    "sirv": "^0.4.2",
     "svelte": "^3.0.0",
-    "svelte-router-spa": "^5.1.1"
+    "svelte-preprocess": "^3.2.6",
+    "ygdir": "^1.19.1"
   },
   "dependencies": {
-    "date-fns": "^2.8.1",
-    "node-sass": "^4.13.0",
-    "sirv-cli": "^0.4.4",
-    "svelte-preprocess": "^3.2.6",
-    "svelte-routing": "^1.4.0"
-  },
-  "scripts": {
-    "build": "rollup -c",
-    "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
-    "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "frontier-frontend": "github:jdkdev/frontier-frontend",
+    "sirv-cli": "^0.4.5"
   }
 }
