--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "transfer:up": "run-s build deploy:hot",
     "build": "rollup -c --environment INCLUDE_DEPS,BUILD:production",
     "deploy:hot": "scp -r public llps:auth.knight.works/",
-    "dev": "run-p watch:routify watch:rollup css-dev",
+    "dev": "run-p watch:routify watch:rollup",
     "watch:rollup": "rollup -c -w",
     "watch:routify": "routify",
     "start": "sirv public --single",
