--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "app-template",
-  "version": "0.0.1",
+  "name": "@frontierjs/spa-template",
+  "version": "0.0.0-beta.0",
   "scripts": {
     "transfer:up": "run-s build deploy:hot",
     "build": "rollup -c --environment INCLUDE_DEPS,BUILD:production",
-    "deploy:hot": "scp -r public llps:auth.knight.works/",
     "dev": "run-p watch:routify watch:rollup",
     "watch:rollup": "rollup -c -w",
     "watch:routify": "routify",
@@ -13,14 +12,12 @@
     "watch:css": "css-dev"
   },
   "devDependencies": {
+    "@frontierjs/frontend": "github:frontierjs/frontend",
     "@rollup/plugin-alias": "^3.0.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-replace": "^2.3.0",
-    "@sveltech/routify": "1.0.1-11",
     "autoprefixer": "^9.7.3",
     "date-fns": "^2.8.1",
-    "frontier-components": "github:jdkdev/frontier-components",
-    "frontier-frontend": "github:jdkdev/frontier-frontend",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
@@ -35,6 +32,7 @@
     "ygdir": "^1.19.1"
   },
   "dependencies": {
+    "@sveltech/routify": "^1.0.1-32",
     "sirv-cli": "^0.4.5"
   }
 }
